--- a/photography.html
+++ b/photography.html
@@ -23,9 +23,9 @@
     </div>
     <div>
       <nav class="top-nav">
-        <div class="item"><a href="/about">About</a></div>
+        <!-- <div class="item"><a href="/about">About</a></div> -->
         <div class="item"><a href="/photography">Photography</a></div>
-        <div class="item"><a href="/blog">Blog</a></div>
+        <!-- <div class="item"><a href="/blog">Blog</a></div> -->
       </nav>
     </div>
   </header>
@@ -34,11 +34,11 @@
     <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
       <div class="album-list">
         <div class="album-item">
-          <a href="/photography/bali">
-            <img class="album-item-thumb" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+          <a href="/photography/2024-09-16-bali">
+            <img class="album-item-thumb" src="/assets/images/photography/2024-09-16-bali/11.webp" alt="Gallery Name">
           </a>
           <div class="album-item-name">
-            <a href="/photography/bali">
+            <a href="/photography/2024-09-16-bali">
               Bali
             </a>
           </div>
@@ -95,6 +95,10 @@
       <div class="footer-responsive">
         <div id="connect">
           <p class="font-weight-bold">Social</p><br />
+          <p>
+            <a href="https://www.tiktok.com/@etarune" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> www.tiktok.com/@etarune</a>
+          </p>
           <p>
             <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"
               class="color-secondary font-size-small">
