--- a/photography/2024-09-16-bali.html
+++ b/photography/2024-09-16-bali.html
@@ -23,9 +23,9 @@
     </div>
     <div>
       <nav class="top-nav">
-        <div class="item"><a href="/about">About</a></div>
+        <!-- <div class="item"><a href="/about">About</a></div> -->
         <div class="item"><a href="/photography">Photography</a></div>
-        <div class="item"><a href="/blog">Blog</a></div>
+        <!-- <div class="item"><a href="/blog">Blog</a></div> -->
       </nav>
     </div>
   </header>
@@ -33,16 +33,28 @@
   <main class="bg-color-gradient-secondary">
     <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
       <div class="gallery">
-        <img class="gallery-item " src="/assets/images/photography/bali-1.png" alt="Gallery Name">
-        <img class="gallery-item" src="/assets/images/photography/bali-2.png" alt="Gallery Name">
-        <img class="gallery-item wide-image" src="/assets/images/photography/bali-3.png" alt="Gallery Name">
-        <img class="gallery-item four-grid-cells" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
-        <img class="gallery-item wide-image" src="/assets/images/photography/bali-2.png" alt="Gallery Name">
-        <img class="gallery-item" src="/assets/images/photography/bali-3.png" alt="Gallery Name">
-        <img class="gallery-item" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
-        <img class="gallery-item wide-image" src="/assets/images/photography/bali-2.png" alt="Gallery Name">
-        <img class="gallery-item wide-image" src="/assets/images/photography/bali-3.png" alt="Gallery Name">
-        <img class="gallery-item" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/01.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/02.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/03.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/04.webp"
+          alt="Gallery Name">
+        <img class="gallery-item four-grid-cells" src="/assets/images/photography/2024-09-16-bali/05.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/06.webp"
+          alt="Gallery Name">
+        <img class="gallery-item" src="/assets/images/photography/2024-09-16-bali/07.webp" alt="Gallery Name">
+        <img class="gallery-item" src="/assets/images/photography/2024-09-16-bali/08.webp" alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/09.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/10.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/11.webp"
+          alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/2024-09-16-bali/12.webp"
+          alt="Gallery Name">
       </div>
     </div>
     </div>
@@ -53,6 +65,10 @@
       <div class="footer-responsive">
         <div id="connect">
           <p class="font-weight-bold">Social</p><br />
+          <p>
+            <a href="https://www.tiktok.com/@etarune" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> tiktok.com/@etarune</a>
+          </p>
           <p>
             <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"
               class="color-secondary font-size-small">
