--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div>
       <nav class="top-nav">
-        <div class="item"><a href="/about">About</a></div>
+        <!-- <div class="item"><a href="/about">About</a></div> -->
         <div class="item"><a href="/photography">Photography</a></div>
-        <div class="item"><a href="/blog">Blog</a></div>
+        <!-- <div class="item"><a href="/blog">Blog</a></div> -->
       </nav>
     </div>
   </header>
@@ -66,6 +66,10 @@
       <div class="footer-responsive">
         <div id="connect">
           <p class="font-weight-bold">Social</p><br />
+          <p>
+            <a href="https://www.tiktok.com/@etarune" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> tiktok.com/@etarune</a>
+          </p>
           <p>
             <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"
               class="color-secondary font-size-small">
