Chore: update webpage

--- a/index.html
+++ b/index.html
@@ -11,80 +11,60 @@
   <link rel="manifest" href="/manifest.json" />
   <title>Hung Nguyen</title>
   <link rel="stylesheet" href="/style.css">
+
+
+  <!-- Fonts -->
+  <link rel="preload" href="/assets/fonts/OpenSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/assets/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf"
+    crossorigin>
+  <link rel="preload" href="/assets/fonts/PlayfairDisplay-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/assets/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf" as="font" type="font/ttf"
+    crossorigin>
+  <link rel="preload" href="/assets/fonts/SpaceMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/assets/fonts/SpaceMono-Italic-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/assets/fonts/SpaceMono-Bold-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/assets/fonts/SpaceMono-BoldItalic-VariableFont_wght.ttf" as="font" type="font/ttf"
+    crossorigin>
+
+  <!-- Icons -->
   <link rel="stylesheet" href="/assets/icons/icomoon/style.css">
 </head>
 
 <body>
-  <header class="container" style="min-height: 10dvh; padding: 20px;">
-    <div class="text-center">
-      <div class="item">
-        <div class="logo font-serif"><a href="/">H</a></div>
-      </div>
-    </div>
-    <div>
-      <nav class="top-nav">
-        <!-- <div class="item"><a href="/about">About</a></div> -->
-        <div class="item"><a href="/photography">Photography</a></div>
-        <!-- <div class="item"><a href="/blog">Blog</a></div> -->
-      </nav>
-    </div>
+  <header>
+    <h1>HUNG NGUYEN</h1>
   </header>
 
-  <main class="bg-color-gradient-primary">
-    <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
-      <div style="max-width: 80%; margin: auto;">
-        <div style="margin-bottom: 48px;">
-          <h1 class="font-serif">Hey, I am Hung.</h1>
-          <p>I am a software enginner by office hours and an enthusiastic photographer.</p>
-        </div>
-        <div>
-          <h2 class="font-serif">What do I do here?</h2>
-          <p>
-            My passion for photography has evolved into a captivating journey of capturing the world's beauty through
-            lenses.
-          </p>
-          <p>
-            I'm currently working on a new project that will showcase my love for photography.
-          </p>
-          <p>
-            Through this project, I aim to capture the essence of the place I travel, explore new creative techniques,
-            and
-            document the beauty of everyday life. I'm excited to share my progress and final results with you as I
-            develop
-            this exciting endeavor.
-          </p>
-        </div>
-      </div>
+  <main>
+    <div>
+      <p class="font-size-large">Software Enginner</p>
+      <p class="font-size-large">Photographer</p>
     </div>
   </main>
 
-  <footer class="footer color-secondary" id="footer" style="min-height: 10dvh;">
-    <div class="container">
-      <div class="footer-responsive">
-        <div id="connect">
-          <p class="font-weight-bold">Social</p><br />
-          <p>
-            <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"
-              class="color-secondary font-size-small">
-              github.com/hungmqn</a>
-          </p>
-          <p>
-            <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"
-              class="color-secondary font-size-small"> linkedin.com/in/hungmqn</a>
-          </p>
-        </div>
-        <div>
-          <p class="font-weight-bold">Thanks for reading</p>
-        </div>
+  <footer>
+    <div class="section-footer">
+      <div>
+        <p><span class="icon-aperture"></span></p>
+        <p class="font-weight-bold">
+          <a href="https://www.seralens.com/" target="_blank" rel="noopener noreferrer" class="font-size-small">
+            seralens.com</a>
+        </p>
       </div>
-      <div class="text-center font-size-small" style="padding: 16px;">
-        <p>
-          &#169; Hung Nguyen
+      <div>
+        <p class="text-align-right font-weight-bold">
+          <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer" class="font-size-small">
+            github.com/hungmqn</a>
+        </p>
+        <p class="text-align-right font-weight-bold">
+          <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"
+            class="color-secondary font-size-small"> linkedin.com/in/hungmqn</a>
         </p>
       </div>
     </div>
-    </div>
   </footer>
+  <div class="screen"></div>
+  <div class="light-scan"></div>
 </body>
 
 </html>
